--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,5 +1,5 @@
 <div class="mainEdu">
-
+    <img class="backImg" src="https://wallpaperaccess.com/full/850641.jpg" alt="">
     <div class="innerEdu">
         <h2 class="mainHeading">Education Background</h2>
         <div class="imgAndDetails">
