--- a/src/app/components/other-skills/other-skills.component.html
+++ b/src/app/components/other-skills/other-skills.component.html
@@ -1,5 +1,5 @@
 <div class="mainOtherSkills" [ngClass]=" opacityNew ? 'opacity3' : '' ">
-
+    <img class="backImg" src="https://cdn.wallpapersafari.com/24/61/ZYm9Qc.jpg" alt="">
     <h2 class="mainHeading">Curriculum Activities</h2>
     <div class="innerClass">
         <h2 class="hobHeading">Hobbies</h2>
