--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,5 +1,6 @@
 
-<div class="backImg" [ngClass]=" opacityNew ? 'opacity3' : '' ">
+<div class="resumeMain" [ngClass]=" opacityNew ? 'opacity3' : '' ">
+    <img class="backImg" src="https://e0.pxfuel.com/wallpapers/433/647/desktop-wallpaper-earth-in-full-for-ultra-earth.jpg" alt="">
     <h2 class="mainHeading">My Resume</h2>
     <div class="image">
         <img src="assets/harshalResume.png" alt="">
