--- a/src/app/components/tech-skills/tech-skills.component.html
+++ b/src/app/components/tech-skills/tech-skills.component.html
@@ -1,4 +1,5 @@
 <div class="mainTech" [ngClass]=" opacityNew ? 'opacity3' : '' ">
+    <img class="backImg" src="https://w.forfun.com/fetch/48/48648b1126aea6d4cbd121b82c7827fa.jpeg" alt="">
     <h2 class="mainHeading">My Technical Skills</h2>
     <div class="container">
         <div class="container__progressbars">
