--- a/src/app/components/education/education.component.scss
+++ b/src/app/components/education/education.component.scss
@@ -23,7 +23,7 @@
             background-color: transparent;
 
             .img {
-                // z-index: 999;
+                z-index: 99;
 
                 img {
                     height: 13rem;
@@ -75,12 +75,14 @@
         margin: 3rem 0;
 
         .img {
+            
             img {
                 height: 8rem;
                 width: auto;
                 margin-bottom: -4rem;
                 border-radius: 10px;
                 box-shadow: 0px 0px 10px 2px gray;
+                
             }
         }
 
