--- a/src/app/components/other-skills/other-skills.component.scss
+++ b/src/app/components/other-skills/other-skills.component.scss
@@ -1,6 +1,7 @@
-.mainOtherSkills{
+.mainOtherSkills {
     background-color: #01091e;
-    .backImg{
+
+    .backImg {
         height: 100%;
         width: 100%;
         opacity: 0.3;
@@ -16,6 +17,9 @@
         margin: 3rem auto;
         border-radius: 20px;
         box-shadow: 0px 0px 10px 10px black;
+        backdrop-filter: blur(15px);
+        background-color: transparent;
+
 
         .hobHeading {
             text-align: center;
@@ -25,6 +29,7 @@
             margin: 0rem 0 1rem;
             letter-spacing: 2px;
         }
+
         .classMain {
             display: flex;
             justify-content: center;
@@ -158,10 +163,12 @@
             text-decoration: none;
             color: #333;
         }
+
         .close:hover {
             color: #06D85F;
             cursor: pointer;
         }
+
         .content {
             max-height: fit-content;
             width: fit-content;
@@ -182,15 +189,16 @@
         width: 80%;
         text-align: center;
 
-        .mainHeading{
+        .mainHeading {
             font-size: 30px;
         }
+
         .hobHeading {
             font-size: 30px;
             margin: 1rem 0;
         }
 
-        .innerClass{
+        .innerClass {
             padding: 1rem;
             margin: 2rem 0;
             border-radius: 20px;
@@ -200,7 +208,7 @@
             .classMain {
                 display: inline;
                 margin: 2rem auto;
-    
+
                 .center {
                     .article-card {
                         margin-bottom: 2rem;
@@ -209,13 +217,16 @@
             }
         }
     }
-    .overlay{
+
+    .overlay {
         margin-top: 4rem;
+
         // width: 80%;
-        .popup{
+        .popup {
             width: 90%;
-            .content{
-                img{
+
+            .content {
+                img {
                     width: 100%;
                 }
             }
@@ -224,15 +235,16 @@
 }
 
 @media (max-width : 767px) {
-    .mainOtherSkills{
-        .innerClass{
+    .mainOtherSkills {
+        .innerClass {
             width: 80%;
             margin-top: 2rem;
-            .classMain{
+
+            .classMain {
                 display: inline;
 
-                .center{
-                    .article-card{
+                .center {
+                    .article-card {
                         margin: 1rem 0;
                         box-shadow: 0px 0px 15px 2px gray;
                     }
