--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,9 @@
 body {
     background-color: #01091e;
 }
-
+.textRight{
+    text-align: right !important;
+}
 .colorYellow {
     background-color: #ffb703 !important;
     border: 2px solid #ffb703 !important;
@@ -71,5 +73,8 @@ body {
 @media (max-width : 767px) {
     .mainHeading {
         font-size: 40px;
+    }
+    .textRight{
+        text-align: center !important;
     }
 }
