--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="profileImg">
-                    <img src="assets/blackProfile.png" alt="">
+                    <img src="assets/color.png" alt="">
                 </div>
             </div>
         </div>
