--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -1,11 +1,12 @@
 .image {
     text-align: center;
-    z-index: 99;
+    z-index: 999;
 
     img {
         height: 100%;
         width: auto;
         z-index: 999;
+        opacity: 1;
         box-shadow: 7px 7px 10px 2px black;
     }
 }
