--- a/src/app/components/contact-me/contact-me.component.html
+++ b/src/app/components/contact-me/contact-me.component.html
@@ -1,4 +1,5 @@
 <div class="contactMainClass" [ngClass]=" opacityNew ? 'opacity3' : '' ">
+    <img class="backImg" src="https://wallpaper.dog/large/5492398.jpg" alt="">
     <h2 class="h1-responsive mainHeading paddingTop">Contact Me</h2>
     <div class="mainClass">
         <section class="mb-4">
