--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -10,12 +10,42 @@
 
     .mainInfoAndImg {
         display: flex;
-        gap: 2rem;
+        gap: 5rem;
         position: absolute;
         top: 50%;
         left: 30%;
         transform: translate(-50%, -50%);
         align-items: center;
+
+        .socialBtns {
+            display: block;
+            margin-top: 2rem;
+            align-items: center;
+            text-align: center;
+
+            .whiteLine{
+                height: 8rem;
+                width: 0.1rem;
+                background-color: white;
+                border-radius: 10px;
+                margin-left: 1rem;
+                box-shadow: 0px 0px 10px 1px #ffb703;
+            }
+
+            i {
+                display: block;
+                font-size: 40px;
+                color: white;
+                cursor: pointer;
+                margin: 1.5rem 0;
+                filter: drop-shadow(0 0 0.75rem #ffb703);
+            }
+
+            i:hover {
+                filter: none;
+                transition: 0.5s;
+            }
+        }
 
         .mainInfo {
             display: inline-block;
@@ -69,23 +99,7 @@
                 }
             }
 
-            .socialBtns {
-                display: flex;
-                gap: 2rem;
-                margin-top: 2rem;
-
-                i {
-                    font-size: 40px;
-                    color: white;
-                    cursor: pointer;
-                    filter: drop-shadow(0 0 0.75rem #ffb703);
-                }
-
-                i:hover {
-                    filter: none;
-                    transition: 0.5s;
-                }
-            }
+            
         }
 
         .mainImg {
@@ -212,7 +226,7 @@
                         height: 30rem;
                         width: auto;
                         margin-top: -10rem;
-                        filter: drop-shadow(10px 10px 8px rgb(43, 43, 43));
+                        filter: drop-shadow(10px 10px 8px rgb(0, 0, 0));
                     }
                 }
             }
